# conv-tools

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README  README.md  autogen.des  autogen.sh  configure.ac
dirconv/: .gitignore  dirconv.c
lib/: Makefile.am
mixconv/: .gitignore  Makefile.am
